# TinyRelDetector

./: README.md  TinyRelDetector.py  main.py  pyproject.toml
TinyRelDetector/: TinyRelDetector.py  __init__.py
